[gd_scene load_steps=17 format=3 uid="uid://bjyd0jkpfj7cp"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_s1fjv"]
[ext_resource type="Texture2D" uid="uid://b0vytsvflvthw" path="res://sprites/zeldaCharSheet.png" id="2_fdgfq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yiwyn"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_887g6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_a7jnp"]
resource_name = "attackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_bitsm"]
resource_name = "attackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Görünüm:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jot34"]
resource_name = "attackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Görünüm:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gy7cm"]
resource_name = "attackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_30w78"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ni1ws"]
resource_name = "roll"

[sub_resource type="Animation" id="Animation_3qgvr"]
resource_name = "walkDown"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_oxde4"]
resource_name = "walkLeft"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Görünüm:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_d1evu"]
resource_name = "walkRight"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Görünüm:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eb1a3"]
resource_name = "walkUp"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Görünüm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n1jd3"]
_data = {
"RESET": SubResource("Animation_887g6"),
"attackDown": SubResource("Animation_a7jnp"),
"attackLeft": SubResource("Animation_bitsm"),
"attackRight": SubResource("Animation_jot34"),
"attackUp": SubResource("Animation_gy7cm"),
"idle": SubResource("Animation_30w78"),
"roll": SubResource("Animation_ni1ws"),
"walkDown": SubResource("Animation_3qgvr"),
"walkLeft": SubResource("Animation_oxde4"),
"walkRight": SubResource("Animation_d1evu"),
"walkUp": SubResource("Animation_eb1a3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aa6ah"]
size = Vector2(22.2857, 20)

[node name="Player" type="CharacterBody2D"]
position = Vector2(128, 128)
script = ExtResource("1_s1fjv")
speed = 50

[node name="İskelet" type="CollisionShape2D" parent="."]
position = Vector2(-8, 0)
shape = SubResource("RectangleShape2D_yiwyn")

[node name="Görünüm" type="Sprite2D" parent="."]
position = Vector2(-8, 0)
texture = ExtResource("2_fdgfq")
hframes = 21
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n1jd3")
}
autoplay = "idle"

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-8.48, 0)
scale = Vector2(1.12, 1.025)
shape = SubResource("RectangleShape2D_aa6ah")

[node name="dealAttackTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="attackCooldown" type="Timer" parent="."]
wait_time = 0.4

[node name="HandPos" type="Marker2D" parent="."]
position = Vector2(-8, 0)

[node name="swordReloadTimer" type="Timer" parent="."]

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="timeout" from="dealAttackTimer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="attackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="swordReloadTimer" to="." method="_on_sword_reload_timer_timeout"]
